# LC3plus

src/fixed_point/basic_op/: dynmem.c
vpr_static_lib/: CMakeLists.txt
zephyr/: CMakeLists.txt  Kconfig  module.yml
